Fix attribute types in root stack

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -184,7 +184,7 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/static-sites/root.yml"]]
-      TimeoutInMinutes: "5"
+      TimeoutInMinutes: 5
   ServerlessRootStack:
     Type: "AWS::CloudFormation::Stack"
     Properties:
@@ -206,7 +206,7 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/serverless/root.yml"]]
-      TimeoutInMinutes: "5"
+      TimeoutInMinutes: 5
   LegacySupportRootStack:
     Type: "AWS::CloudFormation::Stack"
     DependsOn: ECSClusterStack
@@ -237,7 +237,7 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/legacy-support/root.yml"]]
-      TimeoutInMinutes: "5"
+      TimeoutInMinutes: 5
   # App and shared resource stacks
   VPCStack:
     Type: "AWS::CloudFormation::Stack"
@@ -254,7 +254,7 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/vpc.yml"]]
-      TimeoutInMinutes: "5"
+      TimeoutInMinutes: 5
   CertificateStack:
     Type: "AWS::CloudFormation::Stack"
     Properties:
@@ -271,7 +271,7 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/certificate.yml"]]
-      TimeoutInMinutes: "5"
+      TimeoutInMinutes: 5
   ECSClusterStack:
     Type: "AWS::CloudFormation::Stack"
     DependsOn: VPCStack
@@ -316,7 +316,7 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/ecs.yml"]]
-      TimeoutInMinutes: "5"
+      TimeoutInMinutes: 5
   LoadBalancersStack:
     Type: "AWS::CloudFormation::Stack"
     Properties:
@@ -343,7 +343,7 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/load-balancers.yml"]]
-      TimeoutInMinutes: "5"
+      TimeoutInMinutes: 5
   FourohfourStack:
     Type: "AWS::CloudFormation::Stack"
     DependsOn: ECSClusterStack
@@ -366,7 +366,7 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/fourohfour.prx.org.yml"]]
-      TimeoutInMinutes: "5"
+      TimeoutInMinutes: 5
   PublishStack:
     Type: "AWS::CloudFormation::Stack"
     DependsOn: ECSClusterStack
@@ -407,7 +407,7 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/publish.prx.org.yml"]]
-      TimeoutInMinutes: "5"
+      TimeoutInMinutes: 5
   CastleStack:
     Type: "AWS::CloudFormation::Stack"
     DependsOn: ECSClusterStack
@@ -449,7 +449,7 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/castle.prx.org.yml"]]
-      TimeoutInMinutes: "5"
+      TimeoutInMinutes: 5
   JingleStack:
     Type: "AWS::CloudFormation::Stack"
     Condition: IsStaging # Staging only, for now
@@ -492,7 +492,7 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/jingle.prx.org.yml"]]
-      TimeoutInMinutes: "5"
+      TimeoutInMinutes: 5
   UploadLambdaStack:
     Type: "AWS::CloudFormation::Stack"
     Properties:
@@ -518,7 +518,7 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/upload.prx.org.yml"]]
-      TimeoutInMinutes: "5"
+      TimeoutInMinutes: 5
   PlayStack:
     Type: "AWS::CloudFormation::Stack"
     DependsOn: ECSClusterStack
@@ -560,7 +560,7 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/play.prx.org.yml"]]
-      TimeoutInMinutes: "5"
+      TimeoutInMinutes: 5
   CrierStack:
     Type: "AWS::CloudFormation::Stack"
     DependsOn: ECSClusterStack
@@ -595,7 +595,7 @@ Resources:
         SecretsVersion: !Ref CrierSecretsVersion
         AppName: "crier"
         CreateWorker: "true"
-        ContainerPort: 3000
+        ContainerPort: "3000"
         ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemory]
         ContainerMemoryReservation: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemoryReservation]
         ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendCpu]
@@ -606,7 +606,7 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/web-application.yml"]]
-      TimeoutInMinutes: "5"
+      TimeoutInMinutes: 5
   ExchangeStack:
     Type: "AWS::CloudFormation::Stack"
     Condition: IsStaging # Staging only, for now!
@@ -642,7 +642,7 @@ Resources:
         SecretsVersion: !Ref ExchangeSecretsVersion
         AppName: "exchange"
         CreateWorker: "true"
-        ContainerPort: 3000
+        ContainerPort: "3000"
         ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemory]
         ContainerMemoryReservation: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemoryReservation]
         ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendCpu]
@@ -653,7 +653,7 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/web-application.yml"]]
-      TimeoutInMinutes: "5"
+      TimeoutInMinutes: 5
   FeederStack:
     Type: "AWS::CloudFormation::Stack"
     DependsOn: ECSClusterStack
@@ -689,9 +689,9 @@ Resources:
         SecretsVersion: !Ref FeederSecretsVersion
         AppName: "feeder"
         CreateWorker: "true"
-        DesiredWebsProduction: 6
-        DesiredWorkersProduction: 1
-        ContainerPort: 3000
+        DesiredWebsProduction: "6"
+        DesiredWorkersProduction: "1"
+        ContainerPort: "3000"
         ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemory]
         ContainerMemoryReservation: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemoryReservation]
         ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendCpu]
@@ -702,7 +702,7 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/web-alb-application.yml"]]
-      TimeoutInMinutes: "5"
+      TimeoutInMinutes: 5
   DovetailStack:
     Type: "AWS::CloudFormation::Stack"
     DependsOn: ECSClusterStack
@@ -748,7 +748,7 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/dovetail.prx.org.yml"]]
-      TimeoutInMinutes: "5"
+      TimeoutInMinutes: 5
   CmsStack:
     Type: "AWS::CloudFormation::Stack"
     Condition: IsStaging # Staging only, for now
@@ -784,7 +784,7 @@ Resources:
         SecretsVersion: !Ref CmsSecretsVersion
         AppName: "cms"
         CreateWorker: "true"
-        ContainerPort: 3000
+        ContainerPort: "3000"
         ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemory]
         ContainerMemoryReservation: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemoryReservation]
         ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendCpu]
@@ -795,7 +795,7 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/web-application.yml"]]
-      TimeoutInMinutes: "5"
+      TimeoutInMinutes: 5
   IdStack:
     Type: "AWS::CloudFormation::Stack"
     Condition: IsStaging # Staging only, for now
@@ -831,7 +831,7 @@ Resources:
         SecretsVersion: !Ref IdSecretsVersion
         AppName: "id"
         CreateWorker: "false"
-        ContainerPort: 3000
+        ContainerPort: "3000"
         ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemory]
         ContainerMemoryReservation: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemoryReservation]
         ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendCpu]
@@ -842,7 +842,7 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/web-application.yml"]]
-      TimeoutInMinutes: "5"
+      TimeoutInMinutes: 5
   MetricsStack:
     Type: "AWS::CloudFormation::Stack"
     DependsOn: ECSClusterStack
@@ -883,7 +883,7 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/metrics.prx.org.yml"]]
-      TimeoutInMinutes: "5"
+      TimeoutInMinutes: 5
   AnalyticsIngestLambdaStack:
     Type: "AWS::CloudFormation::Stack"
     Properties:
@@ -909,7 +909,7 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/analytics-ingest-lambda.yml"]]
-      TimeoutInMinutes: "5"
+      TimeoutInMinutes: 5
   DovetailStitchLambdaStack:
     Type: "AWS::CloudFormation::Stack"
     Properties:
@@ -935,7 +935,7 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/dovetail-stitch-lambda.yml"]]
-      TimeoutInMinutes: "5"
+      TimeoutInMinutes: 5
   ProxyPrxOrgStack:
     Type: "AWS::CloudFormation::Stack"
     Properties:
@@ -961,7 +961,7 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/proxy.prx.org.yml"]]
-      TimeoutInMinutes: "5"
+      TimeoutInMinutes: 5
 Outputs:
   VPCCertificateArn:
     Description: The ARN for the wildcard certificate for the VPC
