--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -326,6 +326,11 @@ Resources:
           Type: CNAME
           Name: !Sub feeder.${Domain}
         - ResourceRecords:
+            - id.prx.tech.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub id.${Domain}
+        - ResourceRecords:
             - metrics.prx.tech.
           TTL: "300"
           Type: CNAME
@@ -994,11 +999,6 @@ Resources:
           TTL: "300"
           Type: A
           Name: !Sub alpha.${Domain}
-        - ResourceRecords:
-            - "199.119.122.233"
-          TTL: "300"
-          Type: A
-          Name: !Sub id.${Domain}
   Studs:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
