Send all dovetail cdn requests to cloudfront

--- a/dns/prxu.org-hosted_zone.yml
+++ b/dns/prxu.org-hosted_zone.yml
@@ -176,17 +176,17 @@ Resources:
           Type: CNAME
           Name: !Sub cdn-ad-files.${Domain}
         - ResourceRecords:
-            - cds.z6t4p6w9.hwcdn.net.
+            - dovetail-cdn.prxu.org.
           TTL: "86400"
           Type: CNAME
           Name: !Sub cdn-dovetail-staging.${Domain}
         - ResourceRecords:
-            - cds.m9p3n2z3.hwcdn.net.
+            - dovetail-cdn-staging.prxu.org.
           TTL: "300"
           Type: CNAME
           Name: !Sub cdn-dovetail.${Domain}
         - ResourceRecords:
-            - cds.m9p3n2z3.hwcdn.net.
+            - dovetail-cdn.prxu.org.
           TTL: "86400"
           Type: CNAME
           Name: !Sub cdn.dovetail.${Domain}
