Fix parameter types in DB templates

--- a/db/elasticache.yml
+++ b/db/elasticache.yml
@@ -73,12 +73,12 @@ Resources:
       SecurityGroupIngress:
         - CidrIp: 0.0.0.0/0
           IpProtocol: "tcp"
-          FromPort: "11211"
-          ToPort: "11211"
+          FromPort: 11211
+          ToPort: 11211
   ElasticacheCluster:
     Type: "AWS::ElastiCache::CacheCluster"
     Properties:
-      AutoMinorVersionUpgrade: "true"
+      AutoMinorVersionUpgrade: true
       AZMode: !If [MultiZone, "cross-az", "single-az"]
       Engine: "memcached"
       CacheNodeType: !Ref CacheNodeType
