--- a/db/mysql-instance.yml
+++ b/db/mysql-instance.yml
@@ -203,10 +203,10 @@ Resources:
       OKActions: [!Ref OpsWarnSnsTopic]
       AlarmDescription: Free Storage Space getting low
       ComparisonOperator: LessThanOrEqualToThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       MetricName: FreeStorageSpace
       Namespace: AWS/RDS
-      Period: "300"
+      Period: 300
       Statistic: Average
       Threshold: !Ref CloudWatchWarnDiskSpace
       Unit: Bytes
@@ -225,10 +225,10 @@ Resources:
       OKActions: [!Ref OpsWarnSnsTopic]
       AlarmDescription: CPU utilization high
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "5"
+      EvaluationPeriods: 5
       MetricName: CPUUtilization
       Namespace: AWS/RDS
-      Period: "60"
+      Period: 60
       Statistic: Maximum
       Threshold: !Ref CloudWatchWarnCPU
       Unit: Percent
@@ -247,10 +247,10 @@ Resources:
       OKActions: [!Ref OpsWarnSnsTopic]
       AlarmDescription: Database Connections nearing max
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       MetricName: DatabaseConnections
       Namespace: AWS/RDS
-      Period: "60"
+      Period: 60
       Statistic: Maximum
       Threshold: !Ref CloudWatchWarnConnections
       Unit: Count
