Add a linting operation to buildspec

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,4 +9,7 @@ phases:
       - 'pip install cfn-lint'
   build:
     commands:
+      - 'cd $(ls -d */|head -n 1)'
+      - 'cfn-lint --template cd/cd.yml'
       - 'echo "Done"'
+      
