Add ci post build script to project buildspec

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,4 +12,6 @@ phases:
       - 'cd $(ls -d */|head -n 1)'
       - 'cfn-lint --template cd/cd.yml'
       - 'echo "Done"'
-      
+  post_build:
+      commands:
+        - 'curl -sO "https://raw.githubusercontent.com/PRX/Infrastructure/master/ci/utility/post_build.sh" && chmod +x post_build.sh && bash ./post_build.sh'
