Add linting for mysql-intance template
This should fail, at the time of the commit

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,6 +11,7 @@ phases:
     commands:
       - 'cd $(ls -d */|head -n 1)'
       - 'cfn-lint --template cd/cd.yml'
+      - 'cfn-lint --template db/mysql-instance.yml'
       - 'echo "Done"'
   post_build:
       commands:
