Lint all templates

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,9 +10,7 @@ phases:
   build:
     commands:
       - 'cd $(ls -d */|head -n 1)'
-      - 'cfn-lint --template cd/cd.yml'
-      - 'cfn-lint --template db/mysql-instance.yml'
-      - 'echo "Done"'
+      - 'find . -name "*.yml" -type f -mindepth 2 -exec cfn-lint --template {} \; '
   post_build:
       commands:
         - 'curl -sO "https://raw.githubusercontent.com/PRX/Infrastructure/master/ci/utility/post_build.sh" && chmod +x post_build.sh && bash ./post_build.sh'
