Fix docker info output

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -383,7 +383,7 @@ Resources:
                   else echo "Unknown unit $1"; exit 1; fi
                 }
                 function getMetric {
-                  if [ "$1" == "Data" ] || [ "$1" == "Metadata" ] ; then echo $(docker info | grep "$1 Space Available" | awk '{print tolower($5), $4}');
+                  if [ "$1" == "Data" ] || [ "$1" == "Metadata" ] ; then echo $(docker info | grep "$1 Space Available" | sed 's/\([0-9]\+\)\([a-zA-Z]\+\)/\1 \2/' | awk '{print tolower($5), $4}');
                   else echo "Metric must be either 'Data' or 'Metadata'"; exit 1; fi
                 }
                 data=$(convertUnits `getMetric Data`)
