Add cms and jingle to container app nested stack

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -44,12 +44,26 @@ Parameters:
     Type: String
   ContainerCpu:
     Type: String
-  # App Specific ###############################################################
+  # Exchange Specific ###############################################################
   ExchangePlatformALBListenerPriorityPrefix:
     Type: String
   ExchangeSecretsVersion:
     Type: String
   ExchangeEcrImageTag:
+    Type: String
+  # CMS Specific ###############################################################
+  CmsPlatformALBListenerPriorityPrefix:
+    Type: String
+  CmsSecretsVersion:
+    Type: String
+  CmsEcrImageTag:
+    Type: String
+  # Jingle Specific ###############################################################
+  JinglePlatformALBListenerPriorityPrefix:
+    Type: String
+  JingleSecretsVersion:
+    Type: String
+  JingleEcrImageTag:
     Type: String
 Resources:
   ExchangeStack:
@@ -65,7 +79,6 @@ Resources:
         PlatformALBCanonicalHostedZoneID: !Ref PlatformALBCanonicalHostedZoneID
         PlatformALBHTTPListenerArn: !Ref PlatformALBHTTPListenerArn
         PlatformALBHTTPSListenerArn: !Ref PlatformALBHTTPSListenerArn
-        PlatformALBListenerPriorityPrefix: !Ref ExchangePlatformALBListenerPriorityPrefix
         ECSCluster: !Ref ECSCluster
         ECSServiceAutoscaleIAMRoleArn: !Ref ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !Ref ECSServiceIAMRole
@@ -79,15 +92,104 @@ Resources:
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         EcrRegion: !Ref EcrRegion
         SecretsBase: !Ref SecretsBase
-        EcrImageTag: !Ref ExchangeEcrImageTag
-        SecretsVersion: !Ref ExchangeSecretsVersion
         ContainerMemory: !Ref ContainerMemory
         ContainerMemoryReservation: !Ref ContainerMemoryReservation
         ContainerCpu: !Ref ContainerCpu
+        PlatformALBListenerPriorityPrefix: !Ref ExchangePlatformALBListenerPriorityPrefix
+        EcrImageTag: !Ref ExchangeEcrImageTag
+        SecretsVersion: !Ref ExchangeSecretsVersion
         AppName: "exchange"
         CreateWorker: "true"
         ContainerPort: "3000"
         HealthCheckPath: "/"
+      Tags:
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+      TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "web-application.yml"]]
+      TimeoutInMinutes: 5
+  CmsStack:
+    Type: "AWS::CloudFormation::Stack"
+    Condition: IsStaging
+    Properties:
+      NotificationARNs:
+        - Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+      Parameters:
+        VPC: !Ref VPC
+        PlatformALBDNSName: !Ref PlatformALBDNSName
+        PlatformALBFullName: !Ref PlatformALBFullName
+        PlatformALBCanonicalHostedZoneID: !Ref PlatformALBCanonicalHostedZoneID
+        PlatformALBHTTPListenerArn: !Ref PlatformALBHTTPListenerArn
+        PlatformALBHTTPSListenerArn: !Ref PlatformALBHTTPSListenerArn
+        ECSCluster: !Ref ECSCluster
+        ECSServiceAutoscaleIAMRoleArn: !Ref ECSServiceAutoscaleIAMRoleArn
+        ECSServiceIAMRole: !Ref ECSServiceIAMRole
+        OpsDebugMessagesSnsTopicArn:
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+        OpsErrorMessagesSnsTopicArn:
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+        EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        EcrRegion: !Ref EcrRegion
+        SecretsBase: !Ref SecretsBase
+        ContainerMemory: !Ref ContainerMemory
+        ContainerMemoryReservation: !Ref ContainerMemoryReservation
+        ContainerCpu: !Ref ContainerCpu
+        PlatformALBListenerPriorityPrefix: !Ref CmsPlatformALBListenerPriorityPrefix
+        EcrImageTag: !Ref CmsEcrImageTag
+        SecretsVersion: !Ref CmsSecretsVersion
+        AppName: "cms"
+        CreateWorker: "true"
+        ContainerPort: "3000"
+        HealthCheckPath: "/api/v1"
+      Tags:
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+      TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "web-application.yml"]]
+      TimeoutInMinutes: 5
+  JingleStack:
+    Type: "AWS::CloudFormation::Stack"
+    Condition: IsStaging
+    Properties:
+      NotificationARNs:
+        - Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+      Parameters:
+        VPC: !Ref VPC
+        PlatformALBDNSName: !Ref PlatformALBDNSName
+        PlatformALBFullName: !Ref PlatformALBFullName
+        PlatformALBCanonicalHostedZoneID: !Ref PlatformALBCanonicalHostedZoneID
+        PlatformALBHTTPListenerArn: !Ref PlatformALBHTTPListenerArn
+        PlatformALBHTTPSListenerArn: !Ref PlatformALBHTTPSListenerArn
+        ECSCluster: !Ref ECSCluster
+        ECSServiceAutoscaleIAMRoleArn: !Ref ECSServiceAutoscaleIAMRoleArn
+        ECSServiceIAMRole: !Ref ECSServiceIAMRole
+        OpsDebugMessagesSnsTopicArn:
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+        OpsErrorMessagesSnsTopicArn:
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+        EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        EcrRegion: !Ref EcrRegion
+        SecretsBase: !Ref SecretsBase
+        ContainerMemory: !Ref ContainerMemory
+        ContainerMemoryReservation: !Ref ContainerMemoryReservation
+        ContainerCpu: !Ref ContainerCpu
+        PlatformALBListenerPriorityPrefix: !Ref JinglePlatformALBListenerPriorityPrefix
+        EcrImageTag: !Ref JingleEcrImageTag
+        SecretsVersion: !Ref JingleSecretsVersion
+        AppName: "jingle"
+        CreateWorker: "false"
+        ContainerPort: "4000"
+        HealthCheckPath: "/api/v1"
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
