Fix formatting of section separators

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -48,7 +48,7 @@ Parameters:
     Type: String
   ContainerCpu:
     Type: String
-  # Exchange Specific ###############################################################
+  # Exchange Specific ##########################################################
   ExchangePlatformALBListenerPriorityPrefix:
     Type: String
   ExchangeSecretsVersion:
@@ -62,7 +62,7 @@ Parameters:
     Type: String
   CmsEcrImageTag:
     Type: String
-  # Jingle Specific ###############################################################
+  # Jingle Specific ############################################################
   JinglePlatformALBListenerPriorityPrefix:
     Type: String
   JingleSecretsVersion:
