Fixes missing / in template path, lint suggests removing unused param and conditions

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -242,9 +242,8 @@ Resources:
         - Fn::ImportValue:
             !Sub "${NotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
-        InfrastructureStorageStackName: !Ref InfrastructureStorageStackName
         InfrastructureNotificationsStackName: !Ref NotificationsStackName
-        TemplateUrlPrefix: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/container-apps"]]
+        TemplateUrlPrefix: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/container-apps/"]]
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
         VPC: !GetAtt VPCStack.Outputs.VPC
