--- a/db/elasticache.yml
+++ b/db/elasticache.yml
@@ -2,6 +2,12 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: >-
   AWS CloudFormation Memcached Template: Template to create Elasticache Memcached cluster
 Parameters:
+  ClusterName:
+    Description: eg. production-myappname, staging-otherappname
+    Type: String
+  ProjectTag:
+    Description: eg. myapp.prx.org
+    Type: String
   EnvironmentType:
     Type: String
     AllowedValues:
@@ -80,6 +86,7 @@ Resources:
     Properties:
       AutoMinorVersionUpgrade: true
       AZMode: !If [MultiZone, "cross-az", "single-az"]
+      ClusterName: !Ref ClusterName
       Engine: "memcached"
       CacheNodeType: !Ref CacheNodeType
       NumCacheNodes: !Ref NumCacheNodes
@@ -88,7 +95,7 @@ Resources:
         - !GetAtt ElasticacheSecurityGroup.GroupId
       Tags:
         - Key: Project
-          Value: exchange.prx.org
+          Value: !Ref ProjectTag
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: 'prx:cloudformation:stack-name'
